@@ -1,0 +1,26 @@
+// Copyright (C) 2012 Free Software Foundation, Inc.
+//
+// This file is part of the GNU ISO C++ Library.  This library is free
+// software; you can redistribute it and/or modify it under the
+// terms of the GNU General Public License as published by the
+// Free Software Foundation; either version 3, or (at your option)
+// any later version.
+
+// This library is distributed in the hope that it will be useful,
+// but WITHOUT ANY WARRANTY; without even the implied warranty of
+// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+// GNU General Public License for more details.
+
+// You should have received a copy of the GNU General Public License along
+// with this library; see the file COPYING3.  If not see
+// <http://www.gnu.org/licenses/>.
+
+// rope (SGI extension)
+// http://gcc.gnu.org/ml/libstdc++/2012-09/msg00204.html
+
+// { dg-do compile }
+
+#include <ext/rope>
+#include <testsuite_allocator.h>
+
+__gnu_cxx::rope<char, __gnu_test::uneq_allocator<char> > r(10, 'a');
